@@ -146,5 +146,3 @@ notifications:
   irc:
     - irc.freenode.org#django-cms
     - irc.freenode.org#django-cms-sprint
-  webhooks:
-    - http://addons.us-iad-rs.aldryn.io/en/travis-endpoint/
