@@ -1,4 +1,3 @@
--f http://simple.crate.io/
 MarkupSafe==0.23
 Pygments==2.0.2
 sphinx
